--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
+    <meta charset="utf-8">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2149/2149007.png">
     <title>Морской бой</title>
   </head>
   <body>
